# cogni-files

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  app_frontend.py  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: chat_routes.py  document_routes.py
app/core/: __init__.py  config.py  database.py  logger.py
app/prompts/: image_description.md
app/repositories/: __init__.py  document_repository.py
app/schemas/: __init__.py  chat_schema.py  document_schema.py
app/services/: __init__.py  llm_provider.py  pdf_processor.py  vector_storage.py
