[project]
name = "cognifiles"
version = "0.1.0"
description = "Advanced RAG and AI Agent platform for study materials with local and cloud fallbacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "motor>=3.5.0",
    "pydantic-ai>=0.0.1",
    "google-genai>=0.1.0",
    "colorama>=0.4.6",
    "pypdf>=4.2.0",
    "httpx>=0.27.0",
    "pillow>=12.2.0",
    "chromadb>=1.5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
