[project]
name = "cognifiles"
version = "0.1.0"
description = "Advanced RAG and AI Agent platform for study materials with local and cloud fallbacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.39.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",
    "motor>=3.3.2",
    "pydantic-ai>=0.0.1",
    "google-genai",
    "colorama>=0.4.6",
    "pypdf>=4.2.0",
    "httpx",
    "pillow>=12.2.0",
    "chromadb>=0.5.0",
    "pymongo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
